# database

./: .gitignore  CMakeLists.txt  README.md  String.cpp  String.hpp  String.tpp
database/: AlgorythemsFile.cpp  EditFile.cpp  Exceprion.cpp  Exception.hpp  Queue.hpp  ReadFile.cpp  ReadFile.hpp  ReadFile.tpp  String.cpp  String.hpp  String.txt  Vector.hpp  Vector.tpp  VectorTest.cpp  WriteFile.cpp  WriteFile.hpp  WriteFile.tpp  database.vcxproj  database.vcxproj.filters  include.cpp  include.hpp  include.tpp  main.hpp  test.cpp  text.txt  writeVectorsToDatabaseFile.cpp
database/Include/: AlgorythemsFile.hpp  EditFile.hpp  Queue.hpp  ReadFile.hpp  String.hpp  Vector.hpp  WriteFile.hpp
database/Include/TemplateFiles/: EditFile.tpp  Queue.tpp  ReadFile.tpp  Vector.tpp  WriteFile.tpp
database/python/: 13.11.2022.db  test.py  write.py
database/scr/: AlgorythemsFile.cpp  String.cpp  csvTodbFile.cpp
database/x64/Debug/: database.exe.recipe  database.ilk  vc143.idb
database/x64/Debug/database.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  database.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
database/x64/Release/: database.exe.recipe  database.iobj  database.ipdb
database/x64/Release/database.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  database.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
documetasion/: main.html
documetasion/classes/: String.html  Vector.html
documetasion/documentationStyles/: class.css
include/database/: EditFile.hpp  Queue.hpp  ReadFile.hpp  String.hpp  Unsafe.hpp  Vector.hpp  WriteFile.hpp  concepts.hpp  exceptionHandeling.hpp  traits.hpp
include/database/TemplateFiles/: Queue.tpp  ReadFile.tpp  Vector.tpp  WriteFile.tpp
src/: Exception.cpp  String.cpp
tests/: queueTests.cpp  queueTests.hpp  readFileTests.cpp  readFileTests.hpp  stringTests.cpp  vectorTests.cpp  vectorTests.hpp  writeFileTests.cpp  writeFileTests.hpp
